sfdx-source/main/default/objects/Contact/fields/Mother_s_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name__c</fullName>
    <description>The person&apos;s mother&apos;s maiden name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The person&apos;s mother&apos;s maiden name.</inlineHelpText>
    <label>Mother&apos;s Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>