sfdx-source/main/default/objects/Contact/fields/Place_of_Birth_State__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Birth_State__c</fullName>
    <description>Contains the state where the contact was born.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Place of Birth - State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>