sfdx-source/main/default/objects/Contact/fields/SSN_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>SSN_Sensitive__c</fullName>
    <description
    >Formula field that displays the SSN of the person account record if the record is not marked as sensitive or VA Employee. Displays SENSITIVE if the record is flagged as
        sensitive or VA Employee.</description>
    <formula>IF( OR( Sensitive__c =TRUE, VA_Employee__c =TRUE), &quot;SENSITIVE&quot;, Account.HealthCloudGA__TaxId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays “SENSITIVE” if the record is flagged as sensitive or VA Employee</inlineHelpText>
    <label>SSN</label>
    <type>Text</type>
</CustomField>