sfdx-source/main/default/objects/Contact/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finds USER ID from Users Standard object, can be used later in formulas.</description>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>