sfdx-source/main/default/objects/Contact/fields/VA_Employee__c.field-meta.xml
<CustomField>
    <fullName>VA_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to mark a person account as VA Employee. Will be populated via automation and scheduled updates via integration with CDW.</description>
    <inlineHelpText>Marked true if the record is related to a VA Employee</inlineHelpText>
    <label>VA Employee</label>
    <type>Checkbox</type>
</CustomField>