sfdx-source/main/default/objects/Contact/fields/VCC_Date_of_Birth_Text__c.field-meta.xml
<CustomField>
    <fullName>VCC_Date_of_Birth_Text__c</fullName>
    <description>Text value to store the birthdate to allow it to be searched within standard Global Search.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The person&apos;s birthdate.</inlineHelpText>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>