sfdx-source/main/default/objects/Contact/fields/VCC_Dual_Registration__c.field-meta.xml
<CustomField>
    <fullName>VCC_Dual_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Traveling veteran&apos;s can be registered at more than 1 facility</description>
    <inlineHelpText>Traveling veteran&apos;s can be registered at more than 1 facility</inlineHelpText>
    <label>Dual Registration</label>
    <type>Checkbox</type>
</CustomField>