sfdx-source/main/default/objects/Contact/fields/VCC_Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emergency_Contact_Phone__c</fullName>
    <description>Phone number for Emergency Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number for Emergency Contact</inlineHelpText>
    <label>Primary Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>