sfdx-source/main/default/objects/Contact/fields/VCC_Means_Test__c.field-meta.xml
<CustomField>
    <fullName>VCC_Means_Test__c</fullName>
    <description>Date of last income verification</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of last income verification</inlineHelpText>
    <label>Means Test</label>
    <type>Date</type>
</CustomField>