sfdx-source/main/default/objects/Contact/fields/VCC_Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>VCC_Next_of_Kin__c</fullName>
    <description>Name of family member supplied by veteran at enrollment and registration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of family member supplied by veteran at enrollment and registration.</inlineHelpText>
    <label>Primary Next of Kin</label>
    <length>60</length>
    <type>Text</type>
</CustomField>