sfdx-source/main/default/objects/Contact/fields/VCC_Next_of_Kin_Phone__c.field-meta.xml
<CustomField>
    <fullName>VCC_Next_of_Kin_Phone__c</fullName>
    <description>Phone number of family member supplied by veteran at enrollment and registration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number of family member supplied by veteran at enrollment and registration.</inlineHelpText>
    <label>Primary Next of Kin Phone</label>
    <type>Phone</type>
</CustomField>