sfdx-source/main/default/objects/Contact/fields/VCC_Preferred_Gender_of_MSA__c.field-meta.xml
<CustomField>
    <fullName>VCC_Preferred_Gender_of_MSA__c</fullName>
    <description>Used for call routing, only used when a veteran specifically makes a request,</description>
    <inlineHelpText>Used for call routing, only used when a veteran specifically makes a request,</inlineHelpText>
    <label>Preferred Gender of MSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>