sfdx-source/main/default/objects/Contact/fields/VCC_Primary_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>VCC_Primary_Caregiver__c</fullName>
    <description>The name of the Primary Care Giver of the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the primary caregiver for this patient.</inlineHelpText>
    <label>Primary Caregiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>