sfdx-source/main/default/objects/Contact/fields/VCC_Primary_Caregiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>VCC_Primary_Caregiver_Phone__c</fullName>
    <description>Phone number of the primary caregiver for this patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Phone number of the primary caregiver for this patient.</inlineHelpText>
    <label>Primary Caregiver Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>