sfdx-source/main/default/objects/Contact/fields/VCC_Secondary_Registered_Facility__c.field-meta.xml
<CustomField>
    <fullName>VCC_Secondary_Registered_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second facility where a veteran is registered, only used for traveling veterans.</description>
    <inlineHelpText>Second facility where a veteran is registered, only used for traveling veterans.</inlineHelpText>
    <label>Secondary Registered Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Contacts (Secondary Registered Facility)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>