sfdx-source/main/default/objects/Contact/fields/VCC_Temp_Notes__c.field-meta.xml
<CustomField>
    <fullName>VCC_Temp_Notes__c</fullName>
    <description>Extra information specific to a temporary address or phone. Ex; daughter&apos;s home, mobile phone doesn&apos;t work temp phone is for a neighbor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
    >Extra information specific to a temporary address or phone. Ex; daughter&apos;s home, mobile phone doesn&apos;t work temp phone is for a neighbor.</inlineHelpText>
    <label>Temp Notes</label>
    <type>TextArea</type>
</CustomField>