sfdx-source/main/default/objects/Contact/fields/VCC_Temp_Phone__c.field-meta.xml
<CustomField>
    <fullName>VCC_Temp_Phone__c</fullName>
    <description>Veteran&apos;s phone number for a temporary time frame, such as mobile phone is broken.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Veteran&apos;s phone number for a temporary time frame, such as mobile phone is broken.</inlineHelpText>
    <label>Temp Phone</label>
    <type>Phone</type>
</CustomField>