sfdx-source/main/default/objects/Contact/fields/VCC_Temp_Phone_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Temp_Phone_Start_Date__c</fullName>
    <description>The date that the Temporary Phone number starts being used</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the Temporary Phone number starts being used</inlineHelpText>
    <label>Temp Phone Start Date</label>
    <type>Date</type>
</CustomField>