sfdx-source/main/default/objects/Contact/fields/VCC_Temp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>VCC_Temp_Start_Date__c</fullName>
    <description>First day the temporary address is effective for a veteran.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First day the temporary address is effective for a veteran.</inlineHelpText>
    <label>Temp Start Date</label>
    <type>Date</type>
</CustomField>