sfdx-source/main/default/objects/Contact/fields/vccProviderLoginSiteCode__c.field-meta.xml
<CustomField>
    <fullName>vccProviderLoginSiteCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Login Site Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>